--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,17 @@ Authors@R:
     person("John", "Benninghoff", , "jbenninghoff@mac.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-6230-4742"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+URL: https://jabenninghoff.github.io/siracon2022,
+    https://github.com/jabenninghoff/siracon2022
+BugReports: https://github.com/jabenninghoff/siracon2022/issues
+Suggests: 
+    devtools,
+    rdev (>= 1.3.7),
+    testthat (>= 3.0.0)
+Remotes: 
+    jabenninghoff/rdev
+Config/testthat/edition: 3
