--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,9 +1,19 @@
-^renv$
-^renv\.lock$
+^_pkgdown\.yml$
 ^\.github$
 ^\.lintr$
 ^\.Rproj\.user$
+^analysis/.*-figure$
+^analysis/.*\.docx$
+^analysis/.*\.html$
+^analysis/.*\.md$
+^analysis/.*\.pdf$
+^analysis/import$
+^analysis/rendered$
+^docs$
 ^LICENSE\.md$
+^pkgdown$
 ^README\.Rmd$
+^renv\.lock$
+^renv$
 ^siracon2022\.Rproj$
 ^TODO\.md$
