--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,12 @@ vignettes/*.pdf
 .DS_Store
 *.swp
 ~$*
+# analysis package generated files
+# see: https://jabenninghoff.github.io/rdev/articles/analysis-package-layout.html
+analysis/*.docx
+analysis/*.html
+analysis/*.md
+analysis/*.pdf
+analysis/*-figure/
+analysis/import
+analysis/rendered
