--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: siracon2022
-Title: What the Package Does (One Line, Title Case)
+Title: SiRAcon 2022 Notebooks
 Version: 0.0.0.9000
 Authors@R: 
     person("John", "Benninghoff", , "jbenninghoff@mac.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-6230-4742"))
-Description: What the package does (one paragraph).
+Description: Notebooks for my SiRAcon 2022 presentation, "Making R work for you (with automation!)".
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -15,6 +15,8 @@ BugReports: https://github.com/jabenninghoff/siracon2022/issues
 Suggests: 
     devtools,
     dplyr,
+    fs,
+    purrr,
     rdev (>= 1.3.7),
     spelling,
     testthat (>= 3.0.0)
