Add git log, Timeline sections

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,10 @@ Suggests:
     devtools,
     dplyr,
     fs,
+    gert,
     ggplot2,
     jbplot,
+    lubridate,
     purrr,
     rdev (>= 1.3.7),
     readr,
