--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ URL: https://jabenninghoff.github.io/siracon2022,
 BugReports: https://github.com/jabenninghoff/siracon2022/issues
 Suggests: 
     anyflights,
+    desc,
     devtools,
     dplyr,
     fs,
@@ -21,11 +22,14 @@ Suggests:
     ggplot2,
     jbplot,
     lubridate,
+    pkgdown,
+    rmarkdown,
+    knitr,
     purrr,
-    rdev (>= 1.3.7),
-    readr,
+    rdev,
     spelling,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    withr
 Remotes: 
     jabenninghoff/jbplot,
     jabenninghoff/rdev
