--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,9 @@ Version: 0.1.0.9000
 Authors@R: 
     person("John", "Benninghoff", , "jbenninghoff@mac.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-6230-4742"))
-Description: Notebooks for my SiRAcon 2022 presentation, "Making R work for you (with automation!)".
+Description: Notebooks for my SiRAcon 2022 presentation, "Making R work
+    for you (with automation!)".
 License: MIT + file LICENSE
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
 URL: https://jabenninghoff.github.io/siracon2022,
     https://github.com/jabenninghoff/siracon2022
 BugReports: https://github.com/jabenninghoff/siracon2022/issues
@@ -21,12 +19,12 @@ Suggests:
     gert,
     ggplot2,
     jbplot,
+    knitr,
     lubridate,
     pkgdown,
-    rmarkdown,
-    knitr,
     purrr,
     rdev,
+    rmarkdown,
     spelling,
     testthat (>= 3.0.0),
     withr
@@ -34,4 +32,7 @@ Remotes:
     jabenninghoff/jbplot,
     jabenninghoff/rdev
 Config/testthat/edition: 3
+Encoding: UTF-8
 Language: en-US
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.2
