--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,8 +27,10 @@ Suggests:
     pkgdown,
     rdev,
     rmarkdown,
+    scales,
     spelling,
     testthat (>= 3.0.0),
+    vistime,
     withr
 Remotes: 
     jabenninghoff/jbplot,
