--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ License: MIT + file LICENSE
 URL: https://jabenninghoff.github.io/siracon2022,
     https://github.com/jabenninghoff/siracon2022
 BugReports: https://github.com/jabenninghoff/siracon2022/issues
+Depends: 
+    R (>= 2.10)
 Imports:
     gh,
     htmlwidgets,
@@ -42,5 +44,6 @@ Remotes:
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
+LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
