build_analysis_site() for release 1.0.7

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://jabenninghoff.github.io/siracon2022
+url: https://jabenninghoff.github.io/siracon2022/
 navbar:
   structure:
     left:
