--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -39,7 +39,8 @@ jobs:
         with:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
-          use-public-rspm: true
+          # disable Posit package manager
+          use-public-rspm: false
           # uncomment next line if windows build fails per https://github.com/r-lib/actions/issues/585
           # rtools-version: '42'
 
